Fix overflow bug and optimize hero for mobile

--- a/src/layout/components/compare-box.sass
+++ b/src/layout/components/compare-box.sass
@@ -1,3 +1,4 @@
+@import '../config/_breakpoints'
 @import '../config/_colors'
   
 .compare-box
@@ -13,6 +14,8 @@
   margin: 32px
   margin-top: 0
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5)
+  +media($breakpoint-md)
+    margin: 16px
   
 .compare-box__header
   font-size: 48px
