--- a/src/layout/components/footer.sass
+++ b/src/layout/components/footer.sass
@@ -19,6 +19,7 @@
 
 .footer__input
   width: 400px
+  max-width: 90vw
   height: 60px
   text-align: center
   font-size: 32px
@@ -30,6 +31,7 @@
 
 .footer__button
   width: 400px
+  max-width: 90vw
   height: 60px
   text-align: center
   font-size: 32px
@@ -47,6 +49,7 @@
   font-weight: 300
   color: $color-gray
   width: 500px
+  max-width: 90vw
 
 .footer__hr
   width: 80vw
