--- a/src/layout/components/hero.sass
+++ b/src/layout/components/hero.sass
@@ -14,10 +14,13 @@
   font-size: 84px
   font-weight: 100
   margin: 12px
+  text-align: center
   +media($breakpoint-lg)
     font-size: 72px
   +media($breakpoint-md)
     font-size: 60px
+  +media($breakpoint-sm)
+    font-size: 40px
 
 .hero__hr
   width: 80vw
@@ -34,18 +37,21 @@
   text-align: center
   +media($breakpoint-lg)
     font-size: 18px
+  +media($breakpoint-sm)
+    font-size: 16px
 
 .hero__buttons
   display: flex
   align-items: center
   justify-content: center
+  max-width: 90vw
 
 .hero__button
   font-family: Roboto
   margin: 8px
   height: 50px
   width: 240px
-  max-width: 45vw
+  max-width: calc(45vw - 16px)
   background: $color-gold
   border: none
   color: white
